<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dp10">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sp14"
        android:text="@string/title"/>

    <EditText
        android:id="@+id/field_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="@dimen/sp16"
        android:hint="@string/required"
        android:nextFocusDown="@+id/field_category"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sp14"
        android:text="@string/category"/>

    <EditText
        android:id="@+id/field_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="@dimen/sp16"
        android:focusable="false"
        android:editable="false"
        android:hint="@string/select_category"
        android:nextFocusDown="@+id/field_content"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sp14"
        android:text="@string/content"
        android:layout_marginTop="@dimen/dp10"/>

    <EditText
        android:id="@+id/field_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minLines="1"
        android:maxLines="5"
        android:gravity="top"
        android:hint="@string/required"/>

    <!--<Button
        android:id="@+id/submit_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_marginTop="@dimen/dp20"/>-->
</LinearLayout>